# embedded-resources

./: README.md  ci.sh
.github/workflows/: ci.yml
embedded-resources/: Cargo.toml  build.rs
embedded-resources/src/: lib.rs
tests/: Cargo.toml  build.rs
tests/src/: dummy.rs  lib.rs
