[package]
name = "embedded-resources"
version = "0.2.1"
edition = "2021"
authors = ["Adin Ackerman <adinackerman@gmail.com>"]
description = "Define peripheral usage in a single place for use everywhere."
repository = "https://github.com/adinack/embedded-resources"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }

[lib]
proc-macro = true

[features]
stm32 = []
nrf = []
# TODO: more

_test = []
